force-app/main/default/objects/Opportunity/fields/Operator_Guest_Management__c.field-meta.xml
<CustomField>
    <fullName>Operator_Guest_Management__c</fullName>
    <label>Existing Guest Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Evenito</fullName>
            </value>
            <value>
                <fullName>Mate</fullName>
            </value>
            <value>
                <fullName>Guestoo</fullName>
            </value>
            <value>
                <fullName>Enrio</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>