force-app/main/default/objects/Opportunity/fields/Operator_Pick_Up_Delivery_Service__c.field-meta.xml
<CustomField>
    <fullName>Operator_Pick_Up_Delivery_Service__c</fullName>
    <label>Existing Pick Up/Delivery Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Lieferando</fullName>
            </value>
            <value>
                <fullName>Mjam</fullName>
            </value>
            <value>
                <fullName>Ordersmart</fullName>
            </value>
            <value>
                <fullName>Deliveroo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>