force-app/main/default/objects/Opportunity/fields/Operator_Table_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Operator_Table_Reservation__c</fullName>
    <label>Existing Table Reservation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Quandoo</fullName>
            </value>
            <value>
                <fullName>Bookatable</fullName>
            </value>
            <value>
                <fullName>Dish</fullName>
            </value>
            <value>
                <fullName>Opentable</fullName>
            </value>
            <value>
                <fullName>Resmio</fullName>
            </value>
            <value>
                <fullName>Gastronovi</fullName>
            </value>
            <value>
                <fullName>Gastrofix</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>