force-app/main/default/objects/Opportunity/fields/OppCategory__c.field-meta.xml
<CustomField>
    <fullName>OppCategory__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1827
This field is created to be used as a dependant picklist for the opportunity type.
It is a read only except for System admin</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>MINI by orderbird</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>