force-app/main/default/objects/Opportunity/fields/Opportunity_type_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_type_1__c</fullName>
    <description>AccM solution CDS-1831 and CDS-1827</description>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OppCategory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>orderbird pay</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>POS Add on products</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Upselling</fullName>
            </value>
            <value>
                <fullName>pay onboarding</fullName>
            </value>
            <value>
                <fullName>METRO Cockpit</fullName>
            </value>
            <value>
                <fullName>MINI registration</fullName>
            </value>
            <value>
                <fullName>GM - Table Reservation</fullName>
            </value>
            <value>
                <fullName>GM - Ordering System</fullName>
            </value>
            <value>
                <fullName>GM - Bundle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>