force-app/main/default/objects/Opportunity/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <formula>IF( NewBusiness__c = True, &quot;New Business&quot;, 
&quot;amendment&quot;)</formula>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>