force-app/main/default/objects/Opportunity/fields/Other_Terminal_Operator__c.field-meta.xml
<CustomField>
    <fullName>Other_Terminal_Operator__c</fullName>
    <description>https://jira.orderbird.com/browse/SFDC-1450</description>
    <label>Other Terminal Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>