force-app/main/default/objects/Opportunity/fields/PaidAccount__c.field-meta.xml
<CustomField>
    <fullName>PaidAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Account</label>
    <type>Checkbox</type>
</CustomField>