force-app/main/default/objects/Opportunity/fields/PAY__c.field-meta.xml
<CustomField>
    <fullName>PAY__c</fullName>
    <formula>&quot;Partially Required&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAY</label>
    <type>Text</type>
</CustomField>