force-app/main/default/objects/Opportunity/fields/Payboardingemailsent__c.field-meta.xml
<CustomField>
    <fullName>Payboardingemailsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: PAY</description>
    <inlineHelpText>Has the boarding mail been sent? Filled automatically</inlineHelpText>
    <label>Pay boarding email sent</label>
    <type>Checkbox</type>
</CustomField>