force-app/main/default/objects/Opportunity/fields/PayLostReason__c.field-meta.xml
<CustomField>
    <fullName>PayLostReason__c</fullName>
    <description>Stakeholder: PAY with BI</description>
    <inlineHelpText>Why is the prospect not interested in PAY? In case he interested and wants to buy PAY, select: PAY user! Filled by Sales</inlineHelpText>
    <label>PAY Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pay user</fullName>
                <label>PAY user</label>
            </value>
            <value>
                <fullName>cash only</fullName>
            </value>
            <value>
                <fullName>fees too high</fullName>
            </value>
            <value>
                <fullName>reader too expensive</fullName>
            </value>
            <value>
                <fullName>existing contract</fullName>
            </value>
            <value>
                <fullName>existing ConCardis Contract</fullName>
            </value>
            <value>
                <fullName>no Internet</fullName>
            </value>
            <value>
                <fullName>prefers other solution</fullName>
            </value>
            <value>
                <fullName>Performance / loss of time by high frequency</fullName>
            </value>
            <value>
                <fullName>Foreign country / incompatible</fullName>
            </value>
            <value>
                <fullName>Incomplete customer data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>