force-app/main/default/objects/Opportunity/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stakeholder: Sales &amp; CS</description>
    <inlineHelpText>How is the person in charge of the sales talk on the prospect side? This Contact should also include all the relevant contact information (phone, email). Mailings go there. Update if necessary!</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Primary Contact)</relationshipLabel>
    <relationshipName>PrimaryContactForOpp</relationshipName>
    <type>Lookup</type>
</CustomField>