force-app/main/default/objects/Opportunity/fields/Primary_contact_email__c.field-meta.xml
<CustomField>
    <fullName>Primary_contact_email__c</fullName>
    <description>Field created to allow the collection of the contact email in the email alert.</description>
    <formula>Account.Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary contact email</label>
    <type>Text</type>
</CustomField>