force-app/main/default/objects/Opportunity/fields/Process_Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Trigger_Date__c</fullName>
    <label>Process Trigger Date</label>
    <type>Date</type>
</CustomField>