force-app/main/default/objects/Opportunity/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed (temp)</label>
    <type>Checkbox</type>
</CustomField>