force-app/main/default/objects/Opportunity/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>CASE( OppCategory__c , &apos;MINI by orderbird&apos;, &apos;MINI&apos;, &apos;PRO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>