force-app/main/default/objects/Opportunity/fields/QuoteCount__c.field-meta.xml
<CustomField>
    <fullName>QuoteCount__c</fullName>
    <label>Quote Count</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>