force-app/main/default/objects/Opportunity/fields/Reaction_Time__c.field-meta.xml
<CustomField>
    <fullName>Reaction_Time__c</fullName>
    <label>Reaction Time (in Sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>