force-app/main/default/objects/Opportunity/fields/Reaction_Time_disp__c.field-meta.xml
<CustomField>
    <fullName>Reaction_Time_disp__c</fullName>
    <formula>if(isblank(Reaction_Time__c),&quot;&quot;,
if(Reaction_Time__c &gt;= 3600, TEXT(FLOOR(Reaction_Time__c / 3600)) &amp; &quot; Hour&quot; &amp;
if(FLOOR(Reaction_Time__c / 3600) = 1, &quot;&quot;, &quot;s&quot;)
&amp; &quot;, &quot;,&quot;&quot;)
&amp;
if(Reaction_Time__c &gt;= 60, TEXT(FLOOR(MOD(Reaction_Time__c, 3600) / 60)) &amp; &quot; Minute&quot;&amp;
if(FLOOR(MOD(Reaction_Time__c, 3600) / 60) = 1, &quot;&quot;, &quot;s&quot;)
&amp; &quot;, &quot;, &quot;&quot;)
&amp;
TEXT(MOD(Reaction_Time__c, 60)) &amp; &quot; Second&quot;&amp;
if(MOD(Reaction_Time__c, 60) = 1, &quot;&quot;, &quot;s&quot;))</formula>
    <label>Reaction Time</label>
    <type>Text</type>
</CustomField>