force-app/main/default/objects/Opportunity/fields/REFERRAL_METRO__c.field-meta.xml
<CustomField>
    <fullName>REFERRAL_METRO__c</fullName>
    <formula>&quot;Only if relevant&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REFERRAL &amp; METRO</label>
    <type>Text</type>
</CustomField>