force-app/main/default/objects/Opportunity/fields/ReferralAccount__c.field-meta.xml
<CustomField>
    <fullName>ReferralAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stand-in for Referral Contact until this one is fully implemented // Stakeholder: PaM &amp; Sales (CRC)</description>
    <inlineHelpText>Who (Account) referred the lead this opp is based on to us? Filled in by LM or sales as soon as known, preferably on creation</inlineHelpText>
    <label>Referral Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (as Ambassador)</relationshipLabel>
    <relationshipName>Opportunities_Referral</relationshipName>
    <type>Lookup</type>
</CustomField>