force-app/main/default/objects/Opportunity/fields/ReferralContact__c.field-meta.xml
<CustomField>
    <fullName>ReferralContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stakeholder: PaM &amp; Sales (CRC)</description>
    <inlineHelpText>Who referred the lead this opp is based on to us? Filled in by leads or sales as soon as known, preferably on creation</inlineHelpText>
    <label>Referral Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Email</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities as Ambassador</relationshipLabel>
    <relationshipName>Opportunities_referral</relationshipName>
    <type>Lookup</type>
</CustomField>