force-app/main/default/objects/Opportunity/fields/ReferralContactRole__c.field-meta.xml
<CustomField>
    <fullName>ReferralContactRole__c</fullName>
    <description>Stakeholder: PaM &amp; Sales (CRC)</description>
    <inlineHelpText>Has the lead this opp is based on been referred by a partner or existing customer? Filled in by leads or sales as soon as known, preferably on creation</inlineHelpText>
    <label>Referral Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Referral Partner</fullName>
            </value>
            <value>
                <fullName>Customer Recruits Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>