force-app/main/default/objects/Opportunity/fields/ReferringOpportunity__c.field-meta.xml
<CustomField>
    <fullName>ReferringOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>ReferralOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>