force-app/main/default/objects/Opportunity/fields/Region_Account__c.field-meta.xml
<CustomField>
    <fullName>Region_Account__c</fullName>
    <formula>TEXT(Account.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region (Account)</label>
    <type>Text</type>
</CustomField>