force-app/main/default/objects/Opportunity/fields/RemarkFromLead__c.field-meta.xml
<CustomField>
    <fullName>RemarkFromLead__c</fullName>
    <description>Stakeholder: LM &amp; Sales</description>
    <inlineHelpText>Is there any specific information that came with the lead, relevant for the sales talk? Carried over from &quot;Comments&quot; on Lead</inlineHelpText>
    <label>Remark From Lead</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>