force-app/main/default/objects/Opportunity/fields/SentBrochure__c.field-meta.xml
<CustomField>
    <fullName>SentBrochure__c</fullName>
    <description>Stakeholder: Sales with Leadmanagement</description>
    <inlineHelpText>Does the prospect request a flyer send by traditional mail, and if so: which one? Service currently only available in DACH. Set by Sales. LM handles the shipping once per day at 5pm</inlineHelpText>
    <label>Sent Brochure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POS Flyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>