force-app/main/default/objects/Opportunity/fields/Skip_Validation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Validation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>https://jira.orderbird.com/browse/SFDC-1422
Every time a Quote is sent to Zuora, it adds +1 to the existing value.
Created as part of this story, this field can be used as a method to block certain validation rules from firing, when the  opportunity gets updated from a different object.</description>
    <label>Skip Validation</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>