force-app/main/default/objects/Opportunity/fields/SP_ExpectedCloseDate__c.field-meta.xml
<CustomField>
    <fullName>SP_ExpectedCloseDate__c</fullName>
    <label>Sales Prediction Expected Close Date</label>
    <type>Date</type>
</CustomField>