force-app/main/default/objects/Opportunity/fields/SP_LastUpdate__c.field-meta.xml
<CustomField>
    <fullName>SP_LastUpdate__c</fullName>
    <label>Sales Prediction Last Update</label>
    <type>Date</type>
</CustomField>