force-app/main/default/objects/Opportunity/fields/SP_Probability__c.field-meta.xml
<CustomField>
    <fullName>SP_Probability__c</fullName>
    <label>Sales Prediction Probability</label>
    <precision>18</precision>
    <scale>17</scale>
    <type>Number</type>
</CustomField>