force-app/main/default/objects/Opportunity/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>Depends on Opportunity Type</description>
    <inlineHelpText>Depends on the Opportunity Type. For upsell opportunities we are differentiating between Software, Hardware and Pay.</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Pay</fullName>
            </value>
            <value>
                <fullName>SimpleOrder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>