force-app/main/default/objects/Opportunity/fields/Successful_Date_Time_Test__c.field-meta.xml
<CustomField>
    <fullName>Successful_Date_Time_Test__c</fullName>
    <label>Successful Date Time Test</label>
    <type>DateTime</type>
</CustomField>