force-app/main/default/objects/Opportunity/fields/Terminal_Operator__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Operator__c</fullName>
    <description>https://jira.orderbird.com/browse/SFDC-1303</description>
    <label>Terminal Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Concardis</fullName>
            </value>
            <value>
                <fullName>Card Complete</fullName>
            </value>
            <value>
                <fullName>B+S Card Service</fullName>
            </value>
            <value>
                <fullName>Elavon Payments International</fullName>
            </value>
            <value>
                <fullName>FirstData Europe</fullName>
            </value>
            <value>
                <fullName>Ingenico Payment Services</fullName>
            </value>
            <value>
                <fullName>InterCard AG</fullName>
            </value>
            <value>
                <fullName>Six Payment Services</fullName>
            </value>
            <value>
                <fullName>Wirecard</fullName>
            </value>
            <value>
                <fullName>izettel</fullName>
            </value>
            <value>
                <fullName>sumup</fullName>
            </value>
            <value>
                <fullName>other bank reader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>