force-app/main/default/objects/Opportunity/fields/test_count__c.field-meta.xml
<CustomField>
    <fullName>test_count__c</fullName>
    <label>test count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>