force-app/main/default/objects/Opportunity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Stakeholder: Sales &amp; Account Management</description>
    <inlineHelpText>First time customer with a new business or upselling for an existing customer? Set on creation. Determines available Subtypes</inlineHelpText>
    <label>Type (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>new business</fullName>
                <default>true</default>
                <label>new business</label>
            </value>
            <value>
                <fullName>upselling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>