force-app/main/default/objects/Opportunity/fields/UTMMedium__c.field-meta.xml
<CustomField>
    <fullName>UTMMedium__c</fullName>
    <description>Stakeholder: MKT</description>
    <inlineHelpText>Tracking field for Online Marketing. Gets automatically filled with URL parameters attached to our campaigns for web2lead. Carried over from Lead</inlineHelpText>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>