force-app/main/default/objects/Opportunity/fields/UTMSource__c.field-meta.xml
<CustomField>
    <fullName>UTMSource__c</fullName>
    <description>Stakeholder: MKT</description>
    <inlineHelpText>Tracking field for Online Marketing. Gets automatically filled with URL parameters attached to our campaigns for web2lead. Carried over from Lead</inlineHelpText>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>