force-app/main/default/objects/Opportunity/fields/Validfrom__c.field-meta.xml
<CustomField>
    <fullName>Validfrom__c</fullName>
    <description>Stakeholder: Sales &amp; Account Management</description>
    <inlineHelpText>Only for opps with future potential: When should we address the topic (product) of this opp to the contact? Set on creation</inlineHelpText>
    <label>Valid from</label>
    <type>Date</type>
</CustomField>