force-app/main/default/objects/Opportunity/fields/wirelessOrdering__c.field-meta.xml
<CustomField>
    <fullName>wirelessOrdering__c</fullName>
    <description>Stakeholder: Sales &amp; Account Management</description>
    <inlineHelpText>Is the prospect interesting in using wireless ordering? Only relevant for POS opps. Filled by Sales</inlineHelpText>
    <label>wireless Ordering</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>seasonal</fullName>
            </value>
            <value>
                <fullName>maybe</fullName>
            </value>
            <value>
                <fullName>check-out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>