force-app/main/default/objects/Opportunity/fields/Won_Prediction__c.field-meta.xml
<CustomField>
    <fullName>Won_Prediction__c</fullName>
    <label>Won Prediction</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>