force-app/main/default/objects/Opportunity/recordTypes/Closed.recordType-meta.xml
<RecordType>
    <fullName>Closed</fullName>
    <active>true</active>
    <businessProcess>SalesProcess</businessProcess>
    <label>Closed</label>
</RecordType>