force-app/main/default/objects/Opportunity/recordTypes/Closed_AccM.recordType-meta.xml
<RecordType>
    <fullName>Closed_AccM</fullName>
    <active>true</active>
    <businessProcess>SalesProcess</businessProcess>
    <description>Record type for closed Account Management opportunities</description>
    <label>Closed AccM</label>
</RecordType>