force-app/main/default/objects/Opportunity/recordTypes/Open.recordType-meta.xml
<RecordType>
    <fullName>Open</fullName>
    <active>true</active>
    <businessProcess>SalesProcess</businessProcess>
    <label>Open</label>
</RecordType>