force-app/main/default/objects/Opportunity/recordTypes/Open_AccM.recordType-meta.xml
<RecordType>
    <fullName>Open_AccM</fullName>
    <active>true</active>
    <businessProcess>SalesProcess</businessProcess>
    <description>Record type for open Account Management opportunities</description>
    <label>Open AccM</label>
</RecordType>